[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "ccxt>=4.4.72",
    "google-auth-oauthlib>=1.2.1",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pycoingecko>=3.2.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
]
